# sentry-contrib-native

./: .gitmodules  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-test.yml  ci.yml  docs.yml  documentation.yml  format.yml  lint.yml
examples/: custom-transport.rs  example.rs
master/doc/: crates.js  index.html  search-index.js  settings.html  source-files.js
master/doc/dylib/: all.html  fn.test.html  index.html
master/doc/implementors/core/clone/: trait.Clone.js
master/doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
master/doc/implementors/sentry_contrib_native/: trait.Map.js
master/doc/sentry_contrib_native/: all.html  constant.API_VERSION.html  constant.ENVELOPE_MIME.html  constant.SDK_USER_AGENT.html  enum.Consent.html  enum.Error.html  enum.Interface.html  enum.Level.html  enum.Message.html  enum.TransportError.html  enum.TransportShutdown.html  enum.Value.html  fn.clear_modulecache.html  fn.end_session.html  fn.modules_list.html  fn.reinstall_backend.html  fn.remove_context.html  fn.remove_extra.html  fn.remove_fingerprint.html  fn.remove_tag.html  fn.remove_transaction.html  fn.remove_user.html  fn.set_context.html  fn.set_extra.html  fn.set_fingerprint.html  fn.set_hook.html  fn.set_level.html  fn.set_tag.html  fn.set_transaction.html  fn.set_user_consent.html  fn.shutdown.html  fn.start_session.html  fn.user_consent.html  fn.user_consent_get.html  fn.user_consent_give.html  fn.user_consent_reset.html  fn.user_consent_revoke.html  index.html  sidebar-items.js  struct.Breadcrumb.html  (+14 more)
master/doc/sentry_contrib_native/before_send/: fn.before_send.html  fn.sentry_contrib_native_before_send.html  index.html  sidebar-items.js  static.BEFORE_SEND.html  trait.BeforeSend.html  type.Data.html
master/doc/sentry_contrib_native/breadcrumb/: index.html  sidebar-items.js  struct.Breadcrumb.html
master/doc/sentry_contrib_native/event/: enum.Interface.html  index.html  sidebar-items.js  struct.Event.html  struct.Uuid.html
master/doc/sentry_contrib_native/ffi/: fn.catch.html  index.html  sidebar-items.js  trait.CPath.html  trait.CToR.html  trait.RToC.html  type.COsString.html
master/doc/sentry_contrib_native/logger/: enum.Message.html  fn.logger.html  fn.sentry_contrib_native_logger.html  index.html  sidebar-items.js  static.LOGGER.html  trait.Logger.html  type.Logger.html
master/doc/sentry_contrib_native/object/: index.html  sidebar-items.js  struct.Map.html  trait.Map.html  trait.Object.html
master/doc/sentry_contrib_native/options/: enum.Message.html  enum.Ownership.html  fn.ffi_before_send.html  fn.ffi_logger.html  fn.global_read.html  fn.global_write.html  index.html  sidebar-items.js  static.BEFORE_SEND.html  static.GLOBAL_LOCK.html  static.LOGGER.html  struct.Options.html  struct.Shutdown.html  trait.BeforeSend.html  type.Logger.html
master/doc/sentry_contrib_native/panic/: fn.set_hook.html  index.html  sidebar-items.js
master/doc/sentry_contrib_native/test/: fn.set_hook.html  fn.verify_panics.html  index.html  sidebar-items.js
master/doc/sentry_contrib_native/transport/: constant.API_VERSION.html  constant.ENVELOPE_MIME.html  constant.SDK_USER_AGENT.html  enum.Error.html  enum.Shutdown.html  enum.State.html  fn.free.html  fn.send.html  fn.shutdown.html  fn.startup.html  index.html  sidebar-items.js  struct.Dsn.html  struct.Envelope.html  struct.Parts.html  struct.RawEnvelope.html  trait.Transport.html  type.Request.html
master/doc/sentry_contrib_native/user/: index.html  sidebar-items.js  struct.User.html
master/doc/sentry_contrib_native/value/: enum.Value.html  index.html  sidebar-items.js  trait.MP.html
master/doc/sentry_contrib_native_sys/: all.html  constant.SDK_USER_AGENT.html  enum.Level.html  enum.UserConsent.html  enum.ValueType.html  fn.add_breadcrumb.html  fn.capture_event.html  fn.clear_modulecache.html  fn.close.html  fn.end_session.html  fn.envelope_free.html  fn.envelope_get_event.html  fn.envelope_serialize.html  fn.event_add_exception.html  fn.event_add_thread.html  fn.event_value_add_stacktrace.html  fn.free.html  fn.get_modules_list.html  fn.get_options.html  fn.init.html  fn.options_add_attachment.html  fn.options_add_attachmentw.html  fn.options_free.html  fn.options_get_auto_session_tracking.html  fn.options_get_ca_certs.html  fn.options_get_debug.html  fn.options_get_dist.html  fn.options_get_dsn.html  fn.options_get_environment.html  fn.options_get_http_proxy.html  fn.options_get_max_breadcrumbs.html  fn.options_get_release.html  fn.options_get_require_user_consent.html  fn.options_get_sample_rate.html  fn.options_get_symbolize_stacktraces.html  fn.options_get_transport_thread_name.html  fn.options_new.html  fn.options_set_auto_session_tracking.html  fn.options_set_before_send.html  fn.options_set_ca_certs.html  (+90 more)
master/doc/src/dylib/: lib.rs.html
master/doc/src/sentry_contrib_native/: before_send.rs.html  breadcrumb.rs.html  event.rs.html  ffi.rs.html  lib.rs.html  logger.rs.html  object.rs.html  options.rs.html  panic.rs.html  test.rs.html  transport.rs.html  user.rs.html  value.rs.html
master/doc/src/sentry_contrib_native_sys/: lib.rs.html
sentry-contrib-native-sys/: Cargo.toml  LICENSE-MIT  README.md  build.rs
sentry-contrib-native-sys/src/: lib.rs
sentry-native-sys/: Cargo.toml
src/: before_send.rs  breadcrumb.rs  event.rs  ffi.rs  lib.rs  list.rs  logger.rs  map.rs  object.rs  options.rs  panic.rs  string.rs  test.rs  transport.rs  user.rs  value.rs
tests/: before_send.rs  breadcrumb.rs  crash.rs  crash_failure.rs  custom_transport.rs  event.rs  lib.rs  lib_failure.rs  options.rs  panic.rs  test.rs
tests/res/: attachment.txt  crash.rs  crash_failure.rs  getsentry.pem  panic.rs
tests/res/dylib/: Cargo.toml  build.rs
tests/res/dylib/src/: lib.rs
tests/test/: event.rs  mod.rs
tests/test/dylib/: Cargo.toml
tests/test/dylib/src/: lib.rs
tests/util/: custom_transport.rs  event.rs  mod.rs
(+24 files in other folders)
