[package]
name = "sentry-contrib-native-sys"
version = "0.1.0-rc"
authors = ["daxpedda <daxpedda@gmail.com>"]
edition = "2018"
links = "sentry-native"
description = "Unofficial FFI bindings to the Sentry Native SDK for Rust."
readme = "README.md"
repository = "https://github.com/daxpedda/sentry-contrib-native"
license = "MIT OR Apache-2.0"
keywords = ["sentry", "crash", "crashpad", "breakpad", "minidump"]
categories = ["external-ffi-bindings", "development-tools::debugging"]

[build-dependencies]
anyhow = "1"
cmake = "0.1"

[features]
default = ["backend-default", "transport-default"]
backend-default = []
backend-crashpad = []
backend-breakpad = []
backend-inproc = []
transport-default = []
nightly = []

[package.metadata.docs.rs]
features = ["nightly"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
